--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "npm run build && node server.js",
+    "start:local": "node scripts/build-case-index.js && node server.js",
     "build": "node scripts/build-case-index.js",
     "test": "npm test",
     "dev": "node server.js"
