--- a/workers-api/wrangler.toml
+++ b/workers-api/wrangler.toml
@@ -2,10 +2,10 @@ name = "study-app-api"
 main = "src/index.js"
 compatibility_date = "2024-01-01"
 
-[[d1_databases]]
-binding = "DB"
-database_name = "study-app-db"
-database_id = "847ffdd6-aa90-4e43-b43c-31eeed765264"
+# R2バケット設定
+[[r2_buckets]]
+binding = "BUCKET"
+bucket_name = "study-app-data"
 
 [vars]
 # API認証キー（Render.comからの呼び出し時に使用）
