--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.0",
     "helmet": "^7.0.0",
+    "openai": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "xml2js": "^0.6.2"
